--- a/mr/.mrconfig
+++ b/mr/.mrconfig
@@ -7,5 +7,22 @@ checkout = git clone --recurse --jobs=$(nproc) 'git@github.com:thiagowfx/.dotfil
 [.dotfiles_corp]
 checkout = git clone --recurse --jobs=$(nproc) 'sso://user/tperrotta/dotfiles' '.dotfiles_corp'
 chain = true
+skip = lazy
+
+[Projects/thiagowfx.github.io]
+checkout = git clone --recurse --jobs=$(nproc) 'git@github.com:thiagowfx/thiagowfx.github.io.git' 'thiagowfx.github.io'
+skip = lazy
+
+[Projects/aports]
+checkout = git clone 'https://gitlab.alpinelinux.org/alpine/aports' 'aports'
+skip = lazy
+
+[Projects/PKGBUILDs]
+checkout = git clone 'git@github.com:thiagowfx/PKGBUILDs' 'PKGBUILDs'
+skip = lazy
+
+[Projects/adventofcode]
+checkout = git clone 'git@github.com:thiagowfx/adventofcode.git' 'adventofcode'
+skip = lazy
 
 # vim: ft=cfg
