--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -152,8 +152,8 @@ set -g status-right-length 65
 # Set status bar content.
 #  #[default]
 #  #[dim]
-set -g status-left "#[fg=cyan]@#H #[fg=colour242]• "
-set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off#[nodim] }"
+set -g status-left "#[fg=cyan]@#H  "
+set -g status-right "#{?client_prefix,^Z  ,}#{?window_zoomed_flag,🔍  ,}#{?mouse,,#[dim]mouse:off#[nodim]  }"
 # https://github.com/tmux/tmux/issues/1500
 set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,default},bright"'
 
