--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -30,7 +30,7 @@
 	purge = clean -f -d
 	reword = commit --amend -n
 	shelve = stash
-	uncommit = reset --soft HEAD^
+	uncommit = !git reset --soft HEAD^ && git restore --staged .
 	unshelve = stash apply
 	unstash = stash apply
 
