--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,6 +18,7 @@
 	dc = diff --cached
 	desc = commit --allow-empty
 	rc = rebase --continue
+	recommit = commit --reedit-message ORIG_HEAD
 	st = status
 
 	# do not use "emerge" as it is already defined in corp
