ack: add ini format

--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -1,8 +1,11 @@
-# better ctrl/cmd + click navigation for text editors
+# expose column for better ctrl/cmd + click navigation for text editors
 --column
 
 # generate ninja: https://gn.googlesource.com/gn/
 --type-add=gn=.gn,.gni
+
+# ini files
+--type-add=ini=.ini
 
 # chromium
 --ignore-dir=out
