--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,13 +21,16 @@
 	recommit = commit --reedit-message ORIG_HEAD
 	st = status
 
+	# git-absorb(1): https://github.com/tummychow/git-absorb
+	absorb = absorb --and-rebase
+
 	# do not use "emerge" as it is already defined in corp
 	emergef = !git add -A && git amend && git push -f
 
 	# usage: git ignore go,hugo,vim >> .gitignore
 	ignore = !curl -L -s https://www.gitignore.io/api/$@
 
-	# log; there's also gitk and tig
+	# log: there's also gitk and tig
 	l = log --graph --pretty=oneline --abbrev-commit --all
 	xl = branch -vva
 
