--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,7 +36,7 @@
 
 	# hg/fig compatibility
 	purge = clean -f -d
-	reword = commit --amend -n
+	reword = commit --allow-empty --amend -n
 	shelve = stash
 	uncommit = !git reset --soft HEAD^ && git restore --staged .
 	unshelve = stash apply
