git: add pullm alias to mirror pushm (m = matching)

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -27,6 +27,7 @@
 	# do not use "emerge" as it is already defined in corp
 	emergef = !git add -A && git amend && git pushm -f
 	pushm = !git push $(git remote) $(git branch --show-current):$(git branch --show-current)
+	pullm = !git pull $(git remote) $(git branch --show-current):$(git branch --show-current)
 
 	# usage: git ignore go,hugo,vim >> .gitignore
 	ignore = !curl -L -s https://www.gitignore.io/api/$@
