--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -1,6 +1,9 @@
 # expose column for better ctrl/cmd + click navigation for text editors
 --column
 
+# chromium grd files
+--type-add=grd=.grd,.grdp
+
 # generate ninja: https://gn.googlesource.com/gn/
 --type-add=gn=.gn,.gni
 
