--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -83,10 +83,10 @@
         - anki
         - basictex
         # - calibre
-        # - font-cascadia-code
+        - font-cascadia-code
         # - font-fira-code
         # - font-fira-sans
-        # - font-ibm-plex-mono
+        - font-ibm-plex-mono
         - google-chrome
         - google-drive
         - iterm2
