--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -1,11 +1,14 @@
 # expose column for better ctrl/cmd + click navigation for text editors
 --column
 
-# chromium grd files
---type-add=grd=.grd,.grdp
+# cddl
+--type-add=cddl=.cddl
 
 # generate ninja: https://gn.googlesource.com/gn/
 --type-add=gn=.gn,.gni
+
+# chromium grd files
+--type-add=grd=.grd,.grdp
 
 # ini
 --type-add=ini=.ini
