macos: add syncthing cask

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -99,6 +99,7 @@
         - qlmarkdown
         - rectangle
         - spotify
+        # - syncthing
         - textmate
         - visual-studio-code
         - vlc
