tmux: add status-right command

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -177,3 +177,8 @@ set -g pane-border-format '#P:#[bold]#{pane_current_command}'
 
 # Load corp configs if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
+
+# Add gcertstatus to bottom-right of status bar.
+# set -ga status-right "#[fg=green]#(gcertstatus --nocheck_ssh)#[fg=red]#(gcertstatus --nocheck_ssh --quiet || echo 'NO LOAS2')"
+
+# vim ft=tmux
