--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -4,6 +4,8 @@
   roles:
     - role: elliotweiser.osx-command-line-tools
   tasks:
+    - name: Disable double space auto-period on macOS
+      shell: defaults write NSGlobalDomain NSAutomaticPeriodSubstitutionEnabled -bool false
     # https://stackoverflow.com/questions/98310/focus-follows-mouse-plus-auto-raise-on-mac-os-x
     - name: set focus follows mouse on Terminal.app
       community.general.osx_defaults:
