ansible: macos: add intellij

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -90,6 +90,7 @@
         - font-ibm-plex-mono
         - google-chrome
         - google-drive
+        - intellij-idea-ce
         - iterm2
         - jellyfin
         - karabiner-elements
