--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -90,6 +90,7 @@
 
 # https://git-scm.com/docs/diff-config
 [diff]
+	algorithm = histogram
 	# Make it easier to distinguish moved snippets of code within the same file.
 	colorMoved = default
 	colorMovedWs = "allow-indentation-change"
