git: use ssh to sign commits

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -109,6 +109,9 @@
 	# Automatically sign-off patches when using format-patch.
 	signoff = true
 
+[gpg]
+	format = ssh
+
 [help]
 	autocorrect = 1
 
