ansible: macos: add lulu firewall

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -112,6 +112,7 @@
         - iterm2
         - jellyfin
         - karabiner-elements
+        - lulu
         - maccy
         - obsidian
         - qbittorrent
