--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -12,6 +12,7 @@ set draw_borders separators
 
 # Show hidden files. Shortcut: 'zh'.
 setlocal path=~/.dotfiles show_hidden true
+setlocal path=~/.dotfiles_corp show_hidden true
 
 # Edit file: Set 'e' in addition to 'E'.
 map e edit_file
