--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -3,120 +3,7 @@
   hosts: all
   roles:
     - role: elliotweiser.osx-command-line-tools
+    - role: macos
+    - role: brew
+    - role: brew-cask
     - role: iterm2-shell-integration
-  tasks:
-    - name: set ssh authorized keys from url
-      ansible.posix.authorized_key:
-        user: "{{ lookup('env', 'USER') }}"
-        state: present
-        key: https://github.com/thiagowfx.keys
-        comment: github
-    - name: disable double space auto-period on macOS
-      shell: defaults write NSGlobalDomain NSAutomaticPeriodSubstitutionEnabled -bool false
-    # https://stackoverflow.com/questions/98310/focus-follows-mouse-plus-auto-raise-on-mac-os-x
-    - name: set focus follows mouse on Terminal.app
-      community.general.osx_defaults:
-        domain: com.apple.Terminal
-        key: FocusFollowsMouse
-        type: bool
-        value: true
-        state: present
-    # https://stackoverflow.com/questions/39972335/how-do-i-press-and-hold-a-key-and-have-it-repeat-in-vscode
-    - name: unset key press and hold on VSCode.app
-      community.general.osx_defaults:
-        domain: com.microsoft.VSCode
-        key: ApplePressAndHoldEnabled
-        type: bool
-        value: false
-        state: present
-    - name: install git and stow
-      ansible.builtin.package:
-        name: "{{ item }}"
-        state: present
-      with_items:
-        - git
-        - stow
-    # brew tap
-    - name: install brew taps
-      community.general.homebrew_tap:
-        name: "{{ item }}"
-      with_items:
-        - buo/cask-upgrade
-        - homebrew/bundle
-        - homebrew/cask-fonts
-        - homebrew/command-not-found
-        - homebrew/core
-        - homebrew/services
-    # brew leaves -r
-    - name: install brew apps
-      community.general.homebrew:
-        name: "{{ item }}"
-      with_items:
-        - ack
-        - ansible
-        - atool
-        - bash
-        - bash-completion@2
-        - coreutils
-        - direnv
-        - eza
-        - fd
-        - fpp
-        - fzf
-        - gh
-        - git-absorb
-        - gnu-sed
-        - graphviz
-        - htop
-        - hugo
-        - imagemagick
-        - jq
-        - less
-        - lesspipe
-        - make
-        - mas
-        - moreutils
-        - mtr
-        - ncdu
-        - ranger
-        - shellcheck
-        - stow
-        - tig
-        - tmux
-        - tree
-        - vim
-        - watch
-        - wget
-        - zoxide
-        - zsh
-        - zsh-completions
-    # brew list --cask -1
-    - name: install brew casks
-      community.general.homebrew_cask:
-        name: "{{ item }}"
-      with_items:
-        - 1password
-        - anki
-        - basictex
-        - bbedit
-        - calibre
-        - font-cascadia-code
-        - font-ibm-plex-mono
-        - gimp
-        - google-chrome
-        - google-drive
-        - intellij-idea-ce
-        - iterm2
-        - jellyfin
-        - karabiner-elements
-        - lulu
-        - maccy
-        - obsidian
-        - qbittorrent
-        - qlmarkdown
-        - rectangle
-        - spotify
-        - visual-studio-code
-        - vlc
-        - whatsapp
-        - windscribe
