macos: do not show recent applications in dock

--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -24,3 +24,11 @@
     type: bool
     value: false
     state: present
+
+- name: don’t show recent applications in Dock
+  community.general.osx_defaults:
+    domain: com.apple.dock
+    key: show-recents
+    type: bool
+    value: false
+    state: present
