--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -1,5 +1,7 @@
 # vim: ft=conf
 
 [DEFAULT]
+git_status = git status && gh pr list --author "@me"
+git_world = git world "$@"
 git_xl = git xl "$@"
 
