update ansible, remove git-absorb

--- a/roles/brew-cask/tasks/main.yml
+++ b/roles/brew-cask/tasks/main.yml
@@ -14,8 +14,10 @@
     - gimp
     - google-chrome
     - google-drive
+    - hammerspoon
     - intellij-idea-ce
     - iterm2
+    - jdownloader
     - jellyfin
     - karabiner-elements
     - logseq
