--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -25,7 +25,7 @@
     value: false
     state: present
 
-- name: don’t show recent applications in Dock
+- name: do not show recent applications in Dock
   community.general.osx_defaults:
     domain: com.apple.dock
     key: show-recents
