--- a/roles/brew-cask/tasks/main.yml
+++ b/roles/brew-cask/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: install brew casks
   community.general.homebrew_cask:
     name: "{{ item }}"
+  ignore_errors: true
   with_items:
     - 1password
     - anki
