--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -163,7 +163,7 @@ setw -g window-status-style fg=white,bg=default,dim
 
 # Set active window title style.
 set -g window-status-current-format "#I:#W"
-setw -g window-status-current-style fg=white,bg=default,bright
+setw -g window-status-current-style fg=yellow,bg=default,bright
 
 # Set bell style.
 set -g window-status-bell-style fg=red,bg=default,bright
